<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
     android:scrollbars="vertical" 
     android:layout_height="fill_parent" 
     android:layout_width="fill_parent">


<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/int_number_steps"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/stepText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/int_preset_number_steps" >

        <requestFocus />
    </EditText>

           <Button
               android:id="@+id/startOde"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:onClick="integratorClick"
               android:text="@string/int_start_integrator" />

    </TableLayout>
</ScrollView>
    