<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
     android:scrollbars="vertical" 
     android:layout_height="fill_parent" 
     android:layout_width="fill_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_all" android:onClick="reset"/>
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/range_settings"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/x_range"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/leftXRange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned|numberDecimal" />

        <EditText
            android:id="@+id/rightXRange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned|numberDecimal" />
    </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/y_range"
                android:textAppearance="?android:attr/textAppearanceSmall" android:gravity="right|center_vertical"/>

            <EditText
                android:id="@+id/leftYRange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/RightYRange"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="true" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:text="@string/log_x"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <CheckBox
                android:id="@+id/logXCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="2"
                android:gravity="right" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow3a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="true" >

            <TextView
                android:id="@+id/textView5a"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:text="@string/log_y"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <CheckBox
                android:id="@+id/logYCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="2"
                android:gravity="right" />
        </TableRow>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/border_frame_grid_settings"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TableRow
            android:id="@+id/tableRow3x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="true" >

            <TextView
                android:id="@+id/textView5b"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:text="@string/framed"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <CheckBox
                android:id="@+id/framedCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="2"
                android:gravity="right" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/grid"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="center_vertical|right"/>

            <CheckBox
                android:id="@+id/gridCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hand_drawn_settings"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <RadioGroup
                    android:id="@+id/radio_group_point_settings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/radio_settings_points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/points_radio_option" />

                    <RadioButton
                        android:id="@+id/radio_settings_linespoints"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/linespoints_radio_option" />

                    <RadioButton
                        android:id="@+id/radio_settings_splines"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/splines_radio_option" />

                </RadioGroup>
            </TableRow>

        </TableRow>
        <TableRow
            android:id="@+id/tableRowTopicKDE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/text_view_kde_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_kde_histo_topic"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Button
                android:id="@+id/button_setup_kde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/settings_setup_kde_button" />

        </TableRow>
        <TableRow
            android:id="@+id/table_row_histo_kde_activator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="true" >

            <TextView
                android:id="@+id/text_view_kde_activator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:text="@string/settings_activate_histo_kde"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <CheckBox
                android:id="@+id/check_box_histo_activator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="2"
                android:gravity="right" />

        </TableRow>

        <TableRow
            android:id="@+id/table_row_topic_regression"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/text_view_regression_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_regression_topic"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Button
                android:id="@+id/button_setup_regression"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/settings_setup_kde_button" />

        </TableRow>
        <TableRow
            android:id="@+id/table_row_regression_activator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="true" >

            <TextView
                android:id="@+id/text_view_regression_activator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:text="@string/settings_activate_histo_kde"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <CheckBox
                android:id="@+id/check_box_regression_activator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="2"
                android:gravity="right" />

        </TableRow>

    </TableLayout>

</ScrollView>
    